# Hurricane-engine

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
.cache/clangd/index/: _fixes.hpp.53DDE114D30E735B.idx  _vectorize.hpp.CD1D20204A133FF7.idx  box.cpp.AFB88482CB88A173.idx  box.hpp.6E13D5DA2C994581.idx  box_collider.cpp.C08451AFB11B1C93.idx  box_factory.cpp.578B8A831BA3B123.idx  box_factory.hpp.960C9E3AE32A9178.idx  clock.cpp.07E1E10D2EFAFD7F.idx  clock.hpp.AF0BEDB89F2A92F8.idx  common.hpp.B39C36F2F64D59A8.idx  compute_common.hpp.8B3E397D0AE6C9F1.idx  compute_vector_relational.hpp.35C77630DF219B36.idx  constants.hpp.5131560F44AAB925.idx  constants.inl.D4B5126AC5CAA138.idx  epsilon.hpp.47C6DCBBB40BB04B.idx  epsilon.inl.AF0122CBAC4401FE.idx  exponential.hpp.8D2EB17F1015A739.idx  file_reader.cpp.43B7D5D80E8223A2.idx  file_reader.hpp.3263FDA150B21EBA.idx  func_common.inl.B851CADBD9AF715A.idx  func_exponential.inl.53B1C1A82093A93C.idx  func_geometric.inl.0B54EF0713EA78B9.idx  func_integer.inl.25F3B58FC6A02268.idx  func_matrix.inl.1638856EF18092EE.idx  func_packing.inl.DC224061E0978C14.idx  func_trigonometric.inl.3E28F223994F1648.idx  func_vector_relational.inl.7793707BB4B132F3.idx  fwd.hpp.C179D8160AE05FC2.idx  geometric.hpp.CEA721BECA088CB5.idx  glad.cpp.5C6B4B2459BB1765.idx  glad.h.37048E49BAFB950B.idx  glfw3.h.094621FDAD6FB019.idx  glm.hpp.BB0210B42003C07E.idx  input.hpp.DD50E6AB4A4000BE.idx  input_reader.cpp.CC6C32130ADE103E.idx  input_reader.hpp.77AAB35FD72F5829.idx  integer.hpp.CD4FEEC646F88F70.idx  khrplatform.h.3F67CFF1D4E84002.idx  main.cpp.0A1EF6B4C41A87FC.idx  mat2x2.hpp.B672EE37954745B6.idx  (+171 more)
include/: clock.hpp  file_reader.hpp  particle.hpp  shader.hpp  transform.hpp
include/components/: component.hpp
include/components/character_controller/: controller.hpp
include/data_structures/: priority_queue.hpp
include/force_generators/: gravity_generator.hpp
include/game_objects/: box.hpp  circle.hpp  gameobject.hpp
include/game_objects/factories/: box_factory.hpp  circle_factory.hpp
include/input/: input.hpp  input_reader.hpp
include/models/: particle.hpp
include/models/collisions/: collision.hpp
include/models/force_generators/: drag_generator.hpp  force_generator.hpp  gravity_generator.hpp
include/physics/: collision.hpp  contact.hpp  particle.hpp  physics.hpp
include/physics/colliders/: box_collider.hpp  circle_collider.hpp  collider.hpp
include/physics/collision_detection/: detector.hpp
include/physics/collision_resolution/: particle_collision_resolver.hpp  particle_contact_resolver.hpp  resolver.hpp
include/physics/force_generators/: force_generator.hpp  gravity.hpp
include/rendering/: scene.hpp  screen.hpp
include/rendering/scenes/: box_and_circle.hpp  different_weighing_objects.hpp  gravity_test.hpp  infinite_weighing_object.hpp  multiple_objects.hpp  two_boxes.hpp  two_circles.hpp
include/shaders/: shader.hpp
others/collisions/: collision.cpp
others/force_generators/: drag_generator.cpp  force_generator_registy.cpp  gravity_generator.cpp
others/force_generators/spring_generators/: anchored_spring_generator.cpp  basic_spring_generator.cpp  elastic_bungee.cpp
others/include/collisions/: collision.hpp
others/include/force_generators/: drag_generator.hpp  force_generator.hpp  force_generator_registry.hpp
src/: clock.cpp  file_reader.cpp  main.cpp  particle.cpp  shader.cpp
src/components/character_controller/: controller.cpp
src/data_structures/: priority_queue.cpp
src/file_reader/: file_reader.cpp
src/force_generators/: gravity_generator.cpp
src/game_objects/: box.cpp  circle.cpp  game_object.cpp
src/game_objects/factories/: box_factory.cpp  circle_factory.cpp
src/input/: input_reader.cpp
src/models/: particle.cpp
src/models/collisions/: collision.cpp
src/models/force_generators/: drag_generator.cpp  force_generator_registy.cpp
src/physics/: particle.cpp  physics.cpp
src/rendering/: scene.cpp  screen.cpp
src/shaders/: shader.cpp
tests/: test.cpp
(+38 files in other folders)
